--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.6",
     "typescript": "^5"
